--- a/src/LeChuck.ReferralLinks.Console/LeChuck.ReferralLinks.Console.csproj
+++ b/src/LeChuck.ReferralLinks.Console/LeChuck.ReferralLinks.Console.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\..\..\Packages\LeChuck.Telegram.Bot.Framework.Abstractions\LeChuck.Telegram.Bot.Framework.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Packages\LeChuck.Telegram.Bot.FrameWork\LeChuck.Telegram.Bot.FrameWork.csproj" />
     <ProjectReference Include="..\LeChuck.ReferralLinks.Application\LeChuck.ReferralLinks.Application.csproj" />
+    <ProjectReference Include="..\LeChuck.ReferralLinks.Crosscutting\LeChuck.ReferralLinks.Crosscutting.csproj" />
     <ProjectReference Include="..\LeChuck.ReferralLinks.DataAccess\LeChuck.ReferralLinks.DataAccess.csproj" />
     <ProjectReference Include="..\LeChuck.ReferralLinks.Domain\LeChuck.ReferralLinks.Domain.csproj" />
   </ItemGroup>
