--- a/src/LeChuck.ReferralLinks.Crosscutting/LeChuck.ReferralLinks.Crosscutting.csproj
+++ b/src/LeChuck.ReferralLinks.Crosscutting/LeChuck.ReferralLinks.Crosscutting.csproj
@@ -1,21 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <AWSProjectType>Lambda</AWSProjectType>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.110.63" />
+    <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="1.2.0" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\Packages\LeChuck.Telegram.Bot.Framework.Abstractions\LeChuck.Telegram.Bot.Framework.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Packages\LeChuck.Telegram.Bot.FrameWork\LeChuck.Telegram.Bot.FrameWork.csproj" />
     <ProjectReference Include="..\LeChuck.ReferralLinks.Application\LeChuck.ReferralLinks.Application.csproj" />
-    <ProjectReference Include="..\LeChuck.ReferralLinks.Crosscutting\LeChuck.ReferralLinks.Crosscutting.csproj" />
     <ProjectReference Include="..\LeChuck.ReferralLinks.DataAccess\LeChuck.ReferralLinks.DataAccess.csproj" />
-    <ProjectReference Include="..\LeChuck.ReferralLinks.Domain\LeChuck.ReferralLinks.Domain.csproj" />
   </ItemGroup>
+
 </Project>
