--- a/src/LeChuck.ReferralLinks.DataAccess/LeChuck.ReferralLinks.DataAccess.csproj
+++ b/src/LeChuck.ReferralLinks.DataAccess/LeChuck.ReferralLinks.DataAccess.csproj
@@ -2,17 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <UserSecretsId>c7dfb711-299f-46d5-a008-e7be725d3021</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Packages\LeChuck.DataAccess.DynamoDb\LeChuck.DataAccess.DynamoDb.csproj" />
     <ProjectReference Include="..\..\..\Packages\LeChuck.DependencyInjection.Extensions\LeChuck.DependencyInjection.Extensions.csproj" />
-    <ProjectReference Include="..\LeChuck.ReferralLinks.Domain\LeChuck.ReferralLinks.Domain.csproj" />
+    <ProjectReference Include="..\LeChuck.ReferralLinks.Domain.Abstractions\LeChuck.ReferralLinks.Domain.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
