--- a/src/LeChuck.ReferralLinks.Webhook/serverless.template
+++ b/src/LeChuck.ReferralLinks.Webhook/serverless.template
@@ -5,7 +5,7 @@
   "Parameters": {
     "BotKey": {
       "Type": "AWS::SSM::Parameter::Value<String>",
-      "Default": "/ReferralLinks/BotKey"
+      "Default": "/ReferralLink/Config/TelegramToken"
     }
   },
   "Resources": {
@@ -28,6 +28,7 @@
           "Variables": {
             "CONFIG_TABLE": { "Ref" : "ConfigTable"},
             "TIMED_TASKS_TABLE": { "Ref": "TimedTasksTable" },
+            "STATE_MACHINE_TABLE": {"Ref": "StateMachineTable" },
             "BOT_KEY": { "Ref": "BotKey" }
           }
         },
@@ -103,6 +104,18 @@
                   "Arn"
                 ]
               }
+            },
+            {
+              "Effect": "Allow",
+              "Action": [
+                "dynamodb:*"
+              ],
+              "Resource": {
+                "Fn::GetAtt": [
+                  "StateMachineTable",
+                  "Arn"
+                ]
+              }
             }
           ]
         }
@@ -124,6 +137,28 @@
             "KeyType": "HASH"
           }
         ]
+      }
+    },
+    "StateMachineTable": {
+      "Type": "AWS::DynamoDB::Table",
+      "Properties": {
+        "AttributeDefinitions": [
+          {
+            "AttributeName": "MachineId",
+            "AttributeType": "S"
+          }
+        ],
+        "BillingMode": "PAY_PER_REQUEST",
+        "KeySchema": [
+          {
+            "AttributeName": "MachineId",
+            "KeyType": "HASH"
+          }
+        ],
+        "TimeToLiveSpecification": {
+          "AttributeName": "TimeToLive",
+          "Enabled": true
+        }
       }
     },
     "TimedTasksTable": {
