--- a/src/LeChuck.ReferralLinks.Domain/LeChuck.ReferralLinks.Domain.csproj
+++ b/src/LeChuck.ReferralLinks.Domain/LeChuck.ReferralLinks.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
