--- a/src/LeChuck.ReferralLinks.Webhook/LeChuck.ReferralLinks.Webhook.csproj
+++ b/src/LeChuck.ReferralLinks.Webhook/LeChuck.ReferralLinks.Webhook.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AWSSDK.S3" Version="3.3.110.70" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
