Expand shortened urls before processing

--- a/src/LeChuck.ReferralLinks.Console/LeChuck.ReferralLinks.Console.csproj
+++ b/src/LeChuck.ReferralLinks.Console/LeChuck.ReferralLinks.Console.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\LeChuck.ReferralLinks.DataAccess\LeChuck.ReferralLinks.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
